devops/k8s/svc-upstream.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hpay-upstream
  namespace: humun-client-svcs
  labels:
    app: hpay-upstream
spec:
  type: ClusterIP
  selector:
    app: hpay-upstream
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 9998
