devops/k8s/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hpay
  namespace: humun-client-svcs
  labels:
    app: hpay
spec:
  type: ClusterIP
  selector:
    app: hpay
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
