devops/k8s/vs.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hpay
  namespace: humun-client-svcs
spec:
  hosts:
  - "api.402.sh"
  gateways:
  - istio-system/ingressgateway
  http:
  - match:
    - uri:
        prefix: "/v1/"
    rewrite:
      uri: "/v1/"
    route:
    - destination:
        host: hpay
